--- a/src/app/modules/main/main.component.html
+++ b/src/app/modules/main/main.component.html
@@ -1,2 +1,2 @@
 <app-header></app-header>
-<course-card></course-card>
+<course-card *ngFor="let course of courses" [course]="course"></course-card>
