--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <div class="title">
+  <div class="title" (click)="toMain()">
     <img src="https://static1.colliderimages.com/wordpress/wp-content/uploads/2024/04/the-best-robots-are-matt-berry-robots.jpg" alt="">
     <h2>Nazva</h2>
   </div>
